package business.application.demo.repo.entity;

public enum UserRestriction {
    ALL,
    REGISTRED,
    FRIENDS,
    BEST_FRIENDS,
    ME
 }